--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
 													Karnataka<br/>
 												</li>
 												<li class="icon solid fa-phone">
-													7892550085/8889347888
+													9019894440
+												</li>
+												<li class="icon solid fab fa-whatsapp">
+													https://wa.me/919019894440
 												</li>
 												<li class="icon solid fa-envelope">
 													<a href="#">info@d2dlaundry.com</a>
