--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 												<li class="icon solid fa-phone">
 													9019894440
 												</li>
-												<li class="icon solid fa-whatsapp">
+												<li class="icon solid fa fa-whatsapp">
 													https://wa.me/919019894440
 												</li>
 												<li class="icon solid fa-envelope">
